Normalform con campos económicos de convocatoria actualiza correctamente. Ancho normalform personalizado para width al 100%.

--- a/view/css/admin/view.css
+++ b/view/css/admin/view.css
@@ -158,6 +158,12 @@ body.admin div#main div.admin-center div.superform div.elements > ol > li.busy >
     background: none !important;
 }
 
+/*Para la gestión económica de convocatorias */
+
+body.admin div#main div.admin-center div.superform.gestion_financiera{
+    width:100%;
+}
+
 /* Reestilando botones */
 body.admin div#main div.admin-center input[type="submit"],
 body.admin div#main div.admin-center a.button {
