--- a/view/css/project/widget/invest.css
+++ b/view/css/project/widget/invest.css
@@ -270,3 +270,7 @@ div.widget.project-invest.project-called p span.call {
     font-weight: bold;
     color: #58595B;
 }
+
+div.widget.project-invest div.reminder a {
+    text-decoration: none;
+}
