Añadida opción preview para stories.

--- a/view/css/admin/view.css
+++ b/view/css/admin/view.css
@@ -163,3 +163,8 @@ body.admin div#main div.admin-center input[type="submit"],
 body.admin div#main div.admin-center a.button {
     padding: 0.2em 0.4em !important;
 }
+
+div#main div.widget.stories-home{
+margin-bottom: 0px !important;
+}
+
