Maquetación listado news completado. Banner prensa en home aparece como un módulo más, carrousel funcionando. Añadida opción Banner prensa en admin a Poner en portada.

--- a/view/css/home.css
+++ b/view/css/home.css
@@ -5,7 +5,7 @@
 @import url("home/posts.css");
 @import url("home/promotes.css");
 @import url("home/stories.css");
-
+@import url("home/news.css");
 
 
 /*En este archivo dejamos reglas que afectan a más de un módulo */
