--- a/view/css/footer.css
+++ b/view/css/footer.css
@@ -8,9 +8,8 @@ div#footer ul {
 
 div#footer {  
 	width:100%;  
-	height: 150px;
 	margin:0;
-	padding: 20px 0 10px 0;
+	padding: 0 0 10px 0;
 	
     position: relative;		
     background-color: #faf8f8;         
