--- a/view/css/home/news.css
+++ b/view/css/home/news.css
@@ -1,5 +1,21 @@
 /*Reglas módulo patrons de home */
 
+div #press_banner{
+    background-color:#cdcdcd; 
+    height:165px;
+}
+
+div #press_banner div.clip{
+    width:940px; 
+    margin:0 auto; 
+    position:relative;
+}
+
+div #press_banner div.clip_sup{
+   height:15px; 
+   background-color:#e7e7e7;
+}
+
 div#slides_news div.slder_news,
 div#slides_news div.arrow-left,
 div#slides_news div.arrow-right {
@@ -12,14 +28,14 @@ div#slides_news div.slder_news {
 }
 
 div#slides_news div.arrow-left {
-    margin-left: -10px;
-    margin-right: 15px;
-    padding-top: 46px;
+    margin-left: -7px;
+    margin-right: 25px;
+    padding-top: 51px;
 }
 
 div#slides_news div.arrow-right {
-    margin-left: 0px;
-    padding-top: 46px;
+    margin-left: 45px;
+    padding-top: 51px;
 }
 
 div#slides_news div.new{
@@ -31,7 +47,7 @@ div#slides_news div.new{
     height: 85px;
     float: left;
     margin-top: 15px;
-    margin-left: 15px;
+    margin-left: 25px;
 
 }
 
@@ -40,6 +56,15 @@ div.news {
     width: 940px;
     margin: 0 auto;
     display: table;
+
+}
+
+div.news h4.title {
+    text-transform:none; 
+    color: #59595C; 
+    padding-top:20px; 
+    margin-top:0; 
+    margin-bottom:0;
 
 }
 
@@ -53,4 +78,37 @@ div#slides_news div.new a{
     display: table-cell;
     vertical-align: middle;
     position: relative;
+}
+
+div.newrow a.prev,
+div.newrow a.next {
+    width: 16px;
+    height: 16px;
+    position:relative;
+    color:#cdcdcd !important;
+    line-height: 27px;
+    text-indent: 24px;
+    display: inline-block;
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
+}
+
+div.newrow a.prev
+ {
+    background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 0;
+}
+
+div.newrow a.prev:hover
+ {
+    background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -32px;
+}
+
+div.newrow a.next
+ {
+    background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -16px transparent;
+}
+
+div.newrow a.next:hover {
+    background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -48px;
 }
