--- a/nodesys/barcelona/view/css/config.css
+++ b/nodesys/barcelona/view/css/config.css
@@ -4,11 +4,11 @@ body.node {
 }
 
 div#node-header span.blue {
-    color: #1F81BB !important;
+    color: #F08678 !important;
 }
 
 body.node.home > div.widget > div.title-line {
-    border-color: #1F81BB !important;
+    border-color: #F08678 !important;
 }
 
 div#node-header div.logos div.node-home > a {
@@ -19,19 +19,19 @@ div#node-header div.logos div.node-home > a:hover {
     background: url('/nodesys/barcelona/view/css/goteo-logo.png') no-repeat right top;
 }
 
-div#header div#menu{background:none repeat scroll 0 0 #2895CB !important}
-div#header div#menu > ul > li.search fieldset input[type="submit"]:hover{background-color:#58A0CD !important}
+div#header div#menu{background:none repeat scroll 0 0 #f59a8a !important}
+div#header div#menu > ul > li.search fieldset input[type="submit"]:hover{background-color:#F08678 !important}
 
 /*rollover*/
 div#header div#menu > ul > li.community:hover,
 div#header div#menu > ul > li.login:hover,
-div#header div#menu > ul > li.dashboard:hover{background-color:#58A0CD !important}
+div#header div#menu > ul > li.dashboard:hover{background-color:#F08678 !important}
 
 /*submenus*/
-div#header div#menu > ul > li.community > div > ul, div#header div#menu > ul > li.dashboard > div > ul{background-color:#2895CB}
+div#header div#menu > ul > li.community > div > ul, div#header div#menu > ul > li.dashboard > div > ul{background-color:#db7b64}
 div#header div#menu > ul > li.community > div > ul > li > a:hover,
 div#header div#menu > ul > li.dashboard > div > ul > li > a:hover {
-    background-color: #58A0CD;
+    background-color: #F08678;
 }
 
 /* Pestaña de información/cerrar banner */
@@ -41,13 +41,13 @@ div#header div#menu > ul > li.info > a.close{background:url('/nodesys/barcelona/
 div#header div#menu > ul > li.info > a.close:hover{background:url('/nodesys/barcelona/view/css/node_info.png') no-repeat right center transparent}
 /* Fin de pestaña de información/cerrar banner */
 
-div.node-banners-container div.node-banner > div.short-desc{color:#1f81bb;}
-ul.bannerspage li.current a{ background-color:#1f81bb !important;  color:#1f81bb !important}
+div.node-banners-container div.node-banner > div.short-desc{color:#F08678;}
+ul.bannerspage li.current a{ background-color:#F08678 !important;  color:#F08678 !important}
 
 /*widget de buscador*/
-div.side_widget > div.button.current{color:#1f81bb}
-div.side_widget > div.button.current > p > a{color:#1f81bb;}
-div.side_widget > div.categories.current p.title, div.side_widget > div.rewards.current p.title{color:#1F81BB;}
+div.side_widget > div.button.current{color:#F08678}
+div.side_widget > div.button.current > p > a{color:#F08678;}
+div.side_widget > div.categories.current p.title, div.side_widget > div.rewards.current p.title{color:#F08678;}
 /*fin de widget de buscador*/
 
 body.project-show div.project-menu ul li.show a {
