--- a/nodesys/barcelona/view/css/config.css
+++ b/nodesys/barcelona/view/css/config.css
@@ -51,11 +51,11 @@ div.side_widget > div.categories.current p.title, div.side_widget > div.rewards.
 /*fin de widget de buscador*/
 
 body.project-show div.project-menu ul li.show a {
-    background-image: url('active_menu.png') !important;
+    background-image: url('/nodesys/barcelona/view/css/active_menu.png') !important;
 }
 
 body.project-show div.project-menu ul li a {
-  background-image: url('regular_menu.png') !important;
+  background-image: url('/nodesys/barcelona/view/css/regular_menu.png') !important;
 }
 
 body.node div.invest-message {
@@ -66,29 +66,29 @@ body.node div.invest-message {
 * beaks
 */
 div.widget .title{
-	background-image: url('arrowH2-section.gif') !important;
+	background-image: url('/nodesys/barcelona/view/css/arrowH2-section.gif') !important;
 }
 #glossary-content h3.title {
-	background-image: url('arrowH2-section.gif') !important;
+	background-image: url('/nodesys/barcelona/view/css/arrowH2-section.gif') !important;
 }
 
 /* Esquinas del banderolo largo */
 div.widget.project-support div.tagmark.aqua {
-    background-image:url('project/long_tagmark_aqua.png') !important;
+    background-image:url('/nodesys/barcelona/view/css/project/long_tagmark_aqua.png') !important;
 }
 
 div.widget.project-support div.tagmark.green {
-    background-image:url('project/long_tagmark_green.png') !important;
+    background-image:url('/nodesys/barcelona/view/css/project/long_tagmark_green.png') !important;
 }
 
 div.widget.project-support div.tagmark.red {
-    background-image:url('project/long_tagmark_red.png') !important;
+    background-image:url('/nodesys/barcelona/view/css/project/long_tagmark_red.png') !important;
 }
 
 div.widget.project-support div.tagmark.violet {
-    background-image:url('project/long_tagmark_violet.png') !important;
+    background-image:url('/nodesys/barcelona/view/css/project/long_tagmark_violet.png') !important;
 }
 
 div.widget.project-support div.tagmark.grey {
-    background-image:url('project/long_tagmark_grey.png') !important;
+    background-image:url('/nodesys/barcelona/view/css/project/long_tagmark_grey.png') !important;
 }
