--- a/nodesys/barcelona/view/css/node.css
+++ b/nodesys/barcelona/view/css/node.css
@@ -1,9 +1,11 @@
 /* Estilos específicos para el nodo */
 div.content_widget h2 > span.line {background-color: #F08678 !important;}
-body.node.home div.node-projects ul li .categories {background-color: #F08678 !important;}
-body.node.home div.node-projects ul li.active .title a {color: #F08678 !important;}
+div.widget.project div.image div.categories,body.node.home div.node-projects ul li .categories {background-color: #F08678 !important;}
+div.widget.project.active .title a, body.node.home div.node-projects ul li.active .title a {color: #F08678 !important;}
 div.side_widget > div.button > p > a {background-image: url("/nodesys/barcelona/view/css/arrows.gif") !important;}
 ul.bannerspage li a {background-color: #F4A49A !important; color: #F4A49A !important;}
 div#message {background-color: #F08678 !important;}
 div#sub-header-secondary {background-color: #FDEFED;}
 div#message div#message-content input.message-close {background-image: url("/nodesys/barcelona/view/css/message-close.png") !important;}
+div.discover-arrow-left a.discover-arrow {background-image: url("/nodesys/barcelona/view/css/arrowslider-sprt.png");}
+div.navi-bar ul.navi li > a:hover {background-color: #D7CCCD;}
