--- a/view/css/superform.css
+++ b/view/css/superform.css
@@ -1,7 +1,7 @@
 /**
  * Superform!
  */
- 
+
 @import url('superform/datepicker.css');
 
 body.js div.superform .jshidden {
@@ -9,7 +9,7 @@ body.js div.superform .jshidden {
 }
 
 div.superform fieldset {
-    border: 1px solid #99a2a5;    
+    border: 1px solid #99a2a5;
 }
 
 div.superform fieldset legend {
@@ -17,38 +17,38 @@ div.superform fieldset legend {
 }
 
 div.superform h3 {
-    font-size: 30px;    
+    font-size: 30px;
 }
 
 div.superform li.element > h4,
 div.superform li.element > h5,
 div.superform li.element > h6,
 div.superform li.element > h7,
-div.superform li.element > h8 {    
-    margin: 0 0 .5em;    
+div.superform li.element > h8 {
+    margin: 0 0 .5em;
     font-size: 14px;
 }
 
 div.superform li.element > label {
-    font-weight: bold;        
+    font-weight: bold;
     text-transform: uppercase;
     margin: 1em 0;
     display: block;
 }
 
 div.superform > div.hint,
-div.superform > div.elements {    
+div.superform > div.elements {
     overflow: visible;
 }
 
 div.superform > div.hint {
-    color: #7f8183;    
+    color: #7f8183;
     overflow: hidden;
 }
 
 body.js div.superform > div.hint {
-    background: url('superform/wizard.png') no-repeat right top;     
-    border-right: 1px dashed #b7c2c5;      
+    background: url('superform/wizard.png') no-repeat right top;
+    border-right: 1px dashed #b7c2c5;
 }
 
 div.superform > div.elements {
@@ -57,17 +57,17 @@ div.superform > div.elements {
 }
 
 div.superform > div.hint h4,
-div.superform > div.hint blockquote {    
+div.superform > div.hint blockquote {
     background-color: #ffffff;
 /*
     background: url('/view/css/superform/guide.png') 20px 20px;
     padding-left: 60px;
 */
-    padding: 20px;    
+    padding: 20px;
     vertical-align: top;
     border: dashed #b7c2c5;
     border-width: 1px 0 0;
-    margin: 0;    
+    margin: 0;
 }
 
 div.superform > div.hint h4 {
@@ -90,13 +90,13 @@ div.superform > div.hint blockquote p {
 }
 
 div.superform div.elements > ol {
-    padding: 0;    
+    padding: 0;
     margin: 0;
     list-style: none;
 }
 
 div.superform > div.elements div.elements > ol {
-    padding-left: 2em;    
+    padding-left: 2em;
 }
 
 div.superform li.element > div.contents + div.children > div.elements > ol,
@@ -143,7 +143,7 @@ body div.superform > div.elements li.element li.element.inline {
 }
 
 div.superform div.elements > ol > li div.element {
-    display: inline;    
+    display: inline;
 }
 
 div.superform div.elements > ol > li > div.contents + div.children > div.elements {
@@ -153,7 +153,7 @@ div.superform div.elements > ol > li > div.contents + div.children > div.element
 div.superform input[type='text'],
 div.superform input[type='password'],
 div.superform textarea {
-    padding: .4em;    
+    padding: .4em;
     background-color: #d7d9da;
     border: 1px solid #58595b;
 }
@@ -163,7 +163,7 @@ div.superform textarea {
 }
 
 /* Full-width elements */
-div.superform li.element.fullwidth {    
+div.superform li.element.fullwidth {
     border-right: none !important;
     background-color: #e7e7e7 !important;
     margin-right: -2px !important;
@@ -191,7 +191,7 @@ div.superform div.elements > ol > li.error > .title  {
 }
 
 div.superform div.elements > ol > li.busy > .title {
-    background: url('superform/badge/busy/cyan.gif') no-repeat right center;
+    background: url('superform/badge/busy/cyan.gif') no-repeat right center !important;
 }
 
 div.superform li.element.hidden {
@@ -212,7 +212,7 @@ div.superform li.element.textarea > div.contents > textarea {
     width: 99%;
     min-width: 99%;
     max-width: 99%;
-    margin: 0;    
+    margin: 0;
 }
 
 /* Custom textboxes */
@@ -259,7 +259,7 @@ div.superform div.elements > ol > li.element.checkboxes > div.contents > ul,
 div.superform div.elements > ol > li.element.radios > div.contents > ul,
 div.superform div.elements > ol > li.element.slider > div.contents > ul {
     padding: 0;
-    margin: 0;    
+    margin: 0;
     list-style: none;
     overflow: hidden;
     border-top: 1px dashed #bcbdbf;
@@ -288,7 +288,7 @@ div.superform div.elements > ol > li.element.radios > div.contents > ul > li > l
 div.superform div.elements > ol > li.element.slider > div.contents > ul > li > label {
     position: relative;
     padding: .8em 1em;
-    display: block;    
+    display: block;
     cursor: pointer;
 }
 
@@ -353,8 +353,8 @@ div.superform div.elements > ol > li.element.radio {
 div.superform li.element > div.feedback {
     margin-top: 1em;
     font-size: 14px;
-    z-index: 999;    
-    padding-top: 13px;    
+    z-index: 999;
+    padding-top: 13px;
     background: url('superform/tooltip/beak/cyan/n.png') no-repeat 1em 0;
     display: inline-block;
 }
@@ -381,9 +381,9 @@ div.superform li.element > div.feedback > div {
     padding: 20px;
     margin: 0;
     background-color: #def1f1;
-    color: #7f8183;    
-    box-shadow: 2px 3px 0 rgba(0,0,0,.2);    
-    -moz-box-shadow: 2px 3px 0 rgba(0,0,0,.2);    
+    color: #7f8183;
+    box-shadow: 2px 3px 0 rgba(0,0,0,.2);
+    -moz-box-shadow: 2px 3px 0 rgba(0,0,0,.2);
     -webkit-box-shadow: 2px 3px 0 rgba(0,0,0,.2);
     position: relative;
     -moz-border-radius: 7px;
@@ -401,7 +401,7 @@ div.superform li.element > div.feedback > div + div {
 div.superform li.element > div.feedback > div  blockquote {
     padding: 0;
     margin: 0;
-    font-size: 13px;    
+    font-size: 13px;
 }
 
 div.superform li.element > div.feedback > div.error + div.hint > blockquote {
@@ -414,17 +414,17 @@ div.superform li.element > div.feedback > div.error blockquote {
     background: url("superform/feedback/error.png") no-repeat left .2em;
 }
 
-/* Additional color schemes */  
+/* Additional color schemes */
 div.superform.aqua li.element > div.feedback > div {
     background-color: #35b8b8;
     color: white;
 }
 
 div.superform.aqua li.element > div.feedback {
-    background-image: url('superform/tooltip/beak/aqua/n.png');    
+    background-image: url('superform/tooltip/beak/aqua/n.png');
 }
 
-body.js div.superform.aqua li.element > div.feedback  {    
+body.js div.superform.aqua li.element > div.feedback  {
     background-image: url('superform/tooltip/beak/aqua/w.png');
 }
 
@@ -441,12 +441,12 @@ div.superform.red li.element > div.feedback > div {
     color: white;
 }
 
-div.superform.red li.element > div.feedback {    
-    background-image: url('superform/tooltip/beak/red/n.png');    
+div.superform.red li.element > div.feedback {
+    background-image: url('superform/tooltip/beak/red/n.png');
 }
 
 
-body.js div.superform.red li.element > div.feedback  {    
+body.js div.superform.red li.element > div.feedback  {
     background-image: url('superform/tooltip/beak/red/w.png');
 }
 
@@ -458,8 +458,8 @@ div.superform.red textarea {
 }
 
 div.superform.red > div.hint h4,
-div.superform.red > div.hint blockquote {    
-    background-color: #fdedec;    
+div.superform.red > div.hint blockquote {
+    background-color: #fdedec;
     color: #ee4843;
 }
 
@@ -476,11 +476,11 @@ div.superform.green li.element > div.feedback > div {
     color: white;
 }
 
-div.superform.green li.element > div.feedback {    
-    background-image: url('superform/tooltip/beak/green/n.png');    
+div.superform.green li.element > div.feedback {
+    background-image: url('superform/tooltip/beak/green/n.png');
 }
 
-body.js div.superform.green li.element > div.feedback  {    
+body.js div.superform.green li.element > div.feedback  {
     background-image: url('superform/tooltip/beak/green/w.png');
 }
 
@@ -492,8 +492,8 @@ div.superform.green textarea {
 }
 
 div.superform.green > div.hint h4,
-div.superform.green > div.hint blockquote {    
-    background-color: #e7f3e8;    
+div.superform.green > div.hint blockquote {
+    background-color: #e7f3e8;
     color: #00b05b;
 }
 
