--- a/nodesys/barcelona/view/css/config.css
+++ b/nodesys/barcelona/view/css/config.css
@@ -1,6 +1,6 @@
 /* configuración de colores del nodo */
 body.node {
-    background-color: #D7CCCD !important;
+    background-color: #ECE6E7 !important;
 }
 
 div#node-header span.blue {
