Solución a descuadre de widgets de proyectos.

--- a/view/css/project/widget/project.css
+++ b/view/css/project/widget/project.css
@@ -207,6 +207,7 @@ div.widget.project > .author a {
     text-transform: none;
 	position:relative;
 	z-index:100;
+    height: 15px;
 }
 
 div.widget.project > .title a:hover{
