--- a/view/css/project/edit/overview.css
+++ b/view/css/project/edit/overview.css
@@ -94,7 +94,7 @@ body.project-edit div#main.overview div.superform li.element.amount > div.conten
     min-width: 3em;
     float: left;
     padding-right: 2em;
-    background-image: url('/view/css/euro/m.png');
+/*    background-image: url('/view/css/euro/m.png');*/
     background-repeat: no-repeat;
     background-position: 3.7em center;
     font-size: 16px;
