- Eliminación de símbolos de euro duplicados.
- Detalles de desplegable de termómetro, nuevas clases definitivas.

- Paddings no necesarios eliminados.

--- a/app/view/css/project/edit/costs.css
+++ b/app/view/css/project/edit/costs.css
@@ -117,8 +117,8 @@ body.project-edit div#main.costs div.superform li.element.editcost div.children 
     max-width: 3em;
     min-width: 3em;
     float: left;
-    padding-right: 2em;
-    /*background-image: url('/view/css/euro/m.png');*/   
+    /*padding-right: 2em;
+    background-image: url('/view/css/euro/m.png');*/   
     background-repeat: no-repeat;
     background-position: 3.7em center;
     font-size: 16px;
